--- a/style.css
+++ b/style.css
@@ -48,32 +48,39 @@ main {
   height: calc(100dvh - (2 * var(--head-foot-height)));
 
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .game-container {
   aspect-ratio: 1;
-  width: min(600px, min(calc(100dvh - (2 * var(--head-foot-height))), 100dvw));
+  width: min(450px, min(calc(100dvh - (2 * var(--head-foot-height))), 100dvw));
   height: auto;
 
   background-color: var(--font-main-color);
 
   display: grid;
   grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
-  gap: 5px;
+  gap: 3px;
 }
 
 .cell {
   background-color: var(--bg-main-color);
   color: var(--accent-color);
 
-  font-size: min(calc(20dvh), calc(20dvw));
+  cursor: pointer;
+
+  font-size: min(calc(10dvh), calc(10dvw));
 
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  margin: 20px;
+
+  cursor: pointer;
 }
 
 footer {
