--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
   --font-main-color: white;
   --accent-color: dodgerblue;
   --link-visited: gray;
+  --active-filter: brightness(0.7);
+
+  --normal-transition-duration: 0.2s;
 
   --main-padding: 20px;
+  --button-padding: 10px 20px;
   --head-foot-height: 80px;
+  --main-border-radius: 10px;
 }
 
 * {
@@ -42,6 +47,10 @@ header {
 
   position: sticky;
   top: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 main {
@@ -78,9 +87,28 @@ main {
 }
 
 button {
-  margin: 20px;
-
+  all: unset;
+  
   cursor: pointer;
+
+  padding: var(--button-padding);
+
+  background-color: var(--accent-color);
+
+  border: 2px solid var(--font-main-color);
+  border-radius: var(--main-border-radius);
+
+  transition-duration: var(--normal-transition-duration);
+}
+
+button:hover {
+  scale: 1.05;
+}
+
+button:active {
+  scale: 1;
+
+  filter: var(--active-filter);
 }
 
 footer {
