--- a/style.css
+++ b/style.css
@@ -59,6 +59,22 @@ header {
   justify-content: space-between;
 }
 
+fieldset {
+  border: none;
+}
+
+#player-names-input {
+  position: absolute;
+
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 main {
   height: calc(100dvh - (2 * var(--head-foot-height)));
 
