--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ fieldset {
 }
 
 input[type='text'] {
+  color: var(--font-main-color);
   background-color: var(--input-bg-color);
 
   border: 1px solid var(--font-main-color);
